--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
     "@fontsource/inter": "4.2.1",
+    "@mui/material": "5.2.7",
     "@svgr/webpack": "5.5.0",
     "next": "10.0.7",
     "next-seo": "4.20.0",
