--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@emotion/react": "11.7.1",
     "@emotion/styled": "11.6.0",
     "@fontsource/inter": "4.2.1",
+    "@material-ui/core": "5.0.0-beta.5",
     "@mui/material": "5.2.7",
     "@svgr/webpack": "5.5.0",
     "next": "10.0.7",
